Used clamp and stop as per feedback